# digital-twin-platform

./: .dockerignore  .env.example  .gitattributes  .gitignore  .npmrc  AGENTS.md  CHANGELOG.md  LICENSE  README.md  README.zh-CN.md  commitlint.config.js  docker-compose.yml  eslint.config.js  lefthook.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prettier.config.cjs  release-please-config.json  tsconfig.base.json  turbo.json
.github/workflows/: ci.yml  desktop-build.yml  release-please.yml
apps/bff/: .env.example.otel  .gitignore  Dockerfile  docker-entrypoint.sh  package.json  tsconfig.build.json
apps/desktop/: package.json  vitest.config.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/web/: .env.example.otel  Dockerfile  docker-entrypoint.sh  index.html  nginx.conf.template  package.json  tsconfig.json  vite.config.ts
docs/: digital-twin-platform-codex-dev-doc.md
docs/adr/: 0001-monorepo-workspace.md  0002-engine-as-sdk.md  0003-bff-layer.md  0004-node-22-pin.md  0005-public-repo-for-v1.md  0006-v1-closure.md  0007-v2-roadmap.md  0008-v2-closure.md  0009-v2.1-closure.md  0010-v2.2-closure.md  0011-v2.3-closure.md  0012-v3-roadmap.md  0013-v3.0-closure.md  0014-v3.1-closure.md  0015-v3.2-closure.md  0016-v3.3-closure.md  0017-v3.4-closure.md  0018-v3.5-i18n.md  0019-v3.5-closure.md  (+3 more)
scripts/: chart-lint-strict.sh  dev-oidc-idp.mjs  smoke-marketplace.sh  smoke-oidc.sh  smoke-permissions.sh  smoke-prod.sh  smoke-tenant.sh  smoke-v2.sh
(+125 files in other folders)
