[package]
name = "digital-twin-desktop"
version = "0.1.0"
description = "Digital Twin Platform desktop shell"
authors = ["Digital Twin Platform"]
edition = "2021"

[lib]
name = "digital_twin_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
custom-protocol = ["tauri/custom-protocol"]
